# lifx-lan

./: Cargo.toml  README.md
examples/: discover_lights.rs
lifx-serialization/: Cargo.toml
lifx-serialization/lifx_serialization_macro/: Cargo.toml
lifx-serialization/lifx_serialization_macro/src/: lib.rs
lifx-serialization/lifx_serialization_types/: Cargo.toml
lifx-serialization/lifx_serialization_types/src/: header.rs  lib.rs
lifx-serialization/src/: lib.rs
serialization_proc_macro/: Cargo.toml
serialization_proc_macro/lifx_serialization_macro/: Cargo.toml
serialization_proc_macro/lifx_serialization_macro/src/: lib.rs
serialization_proc_macro/lifx_serialization_types/src/: lib.rs
serialization_proc_macro/src/: lib.rs
src/: header.rs  lib.rs  messages.rs  request_options.rs
