[package]
name = "lifx_lan"
version = "0.1.0"
path = "src/lib.rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2.8"
heapless = { version = "0.8.0", optional = true }

lifx_serialization = { path = "./serialization_proc_macro" }

log = "0.4.22"
env_logger = "0.11.5"

[features]
default = []
no-std = ["heapless", "lifx_serialization/no-std"]
