[package]
name = "lifx_serialization"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = { version = "0.8.0", optional = true }

lifx_serialization_types = { path = "./lifx_serialization_types" }
lifx_serialization_macro = { path = "./lifx_serialization_macro" }

[features]
default = []
no-std = ["heapless"]
