[package]
name = "lifx_serialization_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]

syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
heapless = "0.8.0"
lifx_serialization_types = { path = "../lifx_serialization_types" }
